# projects-template

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeLists_native.txt  CMakeLists_qt.txt  Doxyfile  LICENSE_mit.md  README.md  README_library.md
app-template/: .gitignore  LICENSE  README.md
app-template/appname/: CHANGELOG.md  CMakeLists.txt  LICENSE.md  main.cpp  ressources.qrc
app-template/appname/assets/: README  README.md
app-template/appname/assets/icons/dark/: index.theme
app-template/appname/assets/icons/light/: index.theme
app-template/appname/base/: appname_global_native.h.in  appname_global_qt.h.in
app-template/appname/metadata/macos/: Info.plist.in
app-template/appname/ui/qml/qt5/: Main.qml  qml.qrc
app-template/appname/ui/qml/qt6/: Main.qml
app-template/appname/ui/widgets/: mainwindow.cpp  mainwindow.h
app-template/appname/ui/widgets/menu/: menubar.cpp  menubar.h
include/libname/: libraryglobal_native.h.in  libraryglobal_qt.h.in
lib/: CMakeLists_native.txt  CMakeLists_qt.txt  config.h.in  libraryglobal_native.h  libraryglobal_qt.h
libname/: CMakeLists_native.txt  CMakeLists_qt.txt  libraryglobal_native.h  libraryglobal_qt.h
library-template/: .gitignore  CMakeLists.txt  CMakeLists_qt.txt  Doxyfile  README.md
library-template/docs/fragments/: Doxyfile-common.in  Doxyfile-internal.in  Doxyfile-public-api.in
library-template/include/libname/: library_global_native.h.in  library_global_qt.h.in  libraryglobal_native.h.in  libraryglobal_qt.h.in
library-template/metadata/windows/: infos.rc.in
library-template/tests/: CMakeLists.txt  CMakeLists_qt.txt  testshelper.cpp  testshelper.h
library-template/tests/helpers/: testsrsc.cpp  testsrsc.h
tests/: CMakeLists_native.txt  CMakeLists_qt.txt  main.cpp
